<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/naviSettings"
        android:checkableBehavior="none">
        <!-- 프로필 관리 -->
        <item
            android:id="@+id/naviProfile"
            android:icon="@drawable/ic_favorite"
            android:title="@string/profile_manage" />
        <!-- 스케줄 관리 -->
        <item
            android:id="@+id/naviSchedule"
            android:icon="@drawable/ic_person"
            android:title="@string/schedule_manage" />
        <!-- 공지사항 -->
        <item
            android:id="@+id/naviNotice"
            android:icon="@drawable/ic_speaker_note"
            android:title="@string/notice" />
        <!-- 서비스 소개 -->
        <item
            android:id="@+id/naviIntroduce"
            android:icon="@drawable/ic_info"
            android:title="@string/introduce" />
    </group>

    <group
        android:id="@+id/naviInfo"
        android:checkableBehavior="none">
        <!-- 문의/도움말 -->
        <item
            android:id="@+id/naviHelp"
            android:title="@string/help" />
        <!-- 이용약관 -->
        <item
            android:id="@+id/naviTerms"
            android:title="@string/terms" />
        <!-- 라이센스 -->
        <item
            android:id="@+id/naviLicense"
            android:title="@string/license" />
    </group>

</menu>
