<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:theme="@style/ThemeOverlay.AppCompat">

    <!-- 앱바 -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!-- 툴바 -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!-- 콘텐츠 -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <RelativeLayout
                android:id="@+id/layout_noti_setting_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_setting_noti_title"
                    android:textStyle="bold"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_noti_setting_noti"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <include android:id="@+id/layout_noti_setting_line"
                layout="@layout/line_horizontal" />

            <RelativeLayout
                android:id="@+id/layout_noti_setting_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/noti_setting_recommend_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_setting_recommend_title"
                    android:textStyle="bold"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_noti_setting_recommend"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/noti_setting_recommend_title"
                    android:text="@string/noti_setting_recommend_subtitle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_noti_setting_new_volunteer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/noti_setting_new_volunteer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_setting_new_volunteer_title"
                    android:textStyle="bold"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_noti_setting_new_volunteer"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/noti_setting_new_volunteer_title"
                    android:text="@string/noti_setting_new_volunteer_subtitle"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_noti_setting_community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/noti_setting_community_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_setting_community_title"
                    android:textStyle="bold"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_noti_setting_community"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/noti_setting_community_title"
                    android:text="@string/noti_setting_community_subtitle"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>