<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="152dp"
            android:layout_height="167dp"
            android:background="@drawable/ci_fix" />
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:text="VOCKET LIST"-->
    <!--android:textSize="25sp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="-0.03"
            android:gravity="center_horizontal"
            android:text="@string/dialog_introduce_title"
            android:textColor="@color/point_424C57"
            android:textSize="@dimen/font_50"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/dialog_introduce_message"
            android:textSize="@dimen/font_40" />

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:text="보킷리스트와 함께 시작해보세요!!"-->
        <!--android:textSize="15sp" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_introduce_check"
            android:textColor="@color/gray_8080"
            android:textSize="@dimen/font_33" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:text="오늘 하루 보기 않기"-->
        <!--android:textSize="10sp" />-->
    </LinearLayout>

</LinearLayout>