<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_gravity="center_horizontal"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="17dp"
              android:paddingBottom="17dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/volunteer_apply_dialog_title"
        android:textSize="13.3sp"
        android:textStyle="bold"
        android:textColor="#5fb0da"/>

    <TextView
        android:id="@+id/dialog_apply_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16.3dp"
        tools:text="글로벌 지식 교류 NGO 편집 및 디자인 작업"
        android:textSize="13.3sp"
        android:textStyle="bold"
        android:textColor="#5fb0da"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.7dp"
        android:layout_marginBottom="19.7dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_apply_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017.01.24"
            android:textSize="10dp"
            android:textColor="#808080"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.7dp"
        android:layout_marginBottom="16.7dp"
        android:background="#5fb0da"/>

    <RelativeLayout
        android:id="@+id/dialog_apply_name_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11.7sp"
            android:textColor="#808080"
            android:text="@string/volunteer_apply_dialog_name"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/dialog_apply_name_edt"
            android:layout_width="183.3dp"
            android:layout_height="23.3dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittextbackground"
            android:textSize="15sp"
            tools:hint="ex) 신현성"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_apply_email_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.3dp"
        android:layout_marginBottom="8.3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="11.7sp"
            android:textColor="#808080"
            android:text="@string/volunteer_apply_dialog_email"/>

        <EditText
            android:id="@+id/dialog_apply_email_edt"
            android:layout_width="183.3dp"
            android:layout_height="23.3dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittextbackground"
            android:textSize="15sp"
            tools:hint="ex) bong@bong.me"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_apply_phone_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="11.7sp"
            android:textColor="#808080"
            android:text="@string/volunteer_apply_dialog_tel"/>

        <EditText
            android:id="@+id/dialog_apply_phone_edt"
            android:layout_width="183.3dp"
            android:layout_height="23.3dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/edittextbackground"
            android:textSize="15sp"
            tools:hint="ex) 01098252322"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="11dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_apply_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="신청"
            android:textSize="14dp"
            android:textColor="#5fb0da"
            android:padding="6dp"
            android:layout_marginRight="44.7dp"/>

        <TextView
            android:id="@+id/dialog_apply_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:text="취소"
            android:textSize="14dp"
            android:textColor="#808080"/>

    </LinearLayout>

</LinearLayout>